; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_ranges.c_range_is_valid.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_ranges.c_range_is_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Range = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @range_is_valid(i64 %0, i64 %1) #0 {
  %3 = alloca %struct.Range, align 8
  %4 = bitcast %struct.Range* %3 to { i64, i64 }*
  %5 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %4, i32 0, i32 0
  store i64 %0, i64* %5, align 8
  %6 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %4, i32 0, i32 1
  store i64 %1, i64* %6, align 8
  %7 = getelementptr inbounds %struct.Range, %struct.Range* %3, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = getelementptr inbounds %struct.Range, %struct.Range* %3, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp sle i64 %8, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
